Aggiunte classi di test JUnit generate con Claude (pt 2)